# Rai

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
demo/: convert-format.md  source.md  task.md  text.en.strings  translate.md
doc/: agent_loop_design.md  architecture.md  model_provider_config.md  rfc_start_config_profiles_tui.md  security_design.md  template_task.md  user_guide.md
doc/development/: agent_loop_design.md  implementation_plan.md  product_requirements.md  rfc_start_config_profiles_tui.md  security_design.md
doc/guide/: advanced_flags.md  model_provider_config.md  providers_and_models.md  quick_start.md  task_files.md  tools_and_permissions.md  user_guide.md
packaging/homebrew/: rai.rb
packaging/npm/: install.js  package.json
packaging/winget/: appmakes.rai.yaml
src/: agent.rs  config.rs  key_store.rs  main.rs  permission.rs  provider_catalog.rs  task_parser.rs  template.rs
src/providers/: anthropic.rs  google.rs  mod.rs  openai.rs  openai_compatible.rs  poe.rs
src/rules/: default_config.toml  system_prompt.md
src/tools/: ask.rs  builtin.rs  extended.rs  file_append.rs  file_edit.rs  file_read.rs  file_write.rs  git_operations.rs  http_get.rs  http_request.rs  list_dir.rs  ls_tools.rs  mod.rs  path_security.rs  read_file.rs  shell.rs  utils.rs  web_fetch.rs  web_search.rs  write_file.rs
tests/: integration_test.rs
web/: design.pen  docs.html  index.html  install.sh  styles.css  uninstall.sh
