[package]
name = "rai-cli"
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["appmakes.io"]
description = "Run AI instructions directly from your terminal, scripts, and CI/CD pipelines"
repository = "https://github.com/appmakes/Rai"
homepage = "https://appmakes.github.io/Rai/"
keywords = ["ai", "cli", "terminal", "llm", "automation"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "rai"
path = "src/main.rs"

[profile.release]
opt-level = "z"     # optimize for size
lto = true          # link-time optimization – merges all crates
codegen-units = 1   # single codegen unit for maximum optimization
strip = true        # strip debug symbols from the binary

[dependencies]
anyhow = "1.0.95"
dotenvy = "0.15"
async-trait = "0.1.89"
atty = "0.2"
clap = { version = "4.5.23", features = ["derive"] }
dialoguer = "0.11.0"
directories = "6.0.0"
keyring = "3.6.3"
regex = "1.11"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
